run for multiple sequences

--- a/configs/config.json
+++ b/configs/config.json
@@ -1,6 +1,6 @@
 {
-    "name": "CCTBodyPart_test_eval",
-    "experim_name": "CCTBodyPart_test_eval",
+    "name": "seq2",
+    "experim_name": "seq2",
     "n_gpu": 1,
     "n_labeled_examples": 1040,
     "diff_lrs": true,
@@ -51,7 +51,7 @@
     "optimizer": {
         "type": "SGD",
         "args":{
-            "lr": 1e-2,
+            "lr": 1e-3,
             "weight_decay": 1e-4,
             "momentum": 0.9
         }
@@ -117,7 +117,7 @@
     },
 
     "trainer": {
-        "epochs": 252,
+        "epochs": 500,
         "save_dir": "saved_body_part/",
         "save_period": 5,
   
